--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -std=c++11 -g")
 add_executable(writer writer.cpp)
 target_link_libraries(writer db_stl db_cxx)
 
+add_executable(reader reader.cpp)
+target_link_libraries(reader db_stl db_cxx)
+
